Added ReadFrames, UVCSettings, HIDControls

--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="UVCSettings.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExtensionUnit.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EnumerateCamera.h">
