--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -45,7 +45,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -123,13 +123,14 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>Mfplat.lib;Mf.lib;mfreadwrite.lib;ShLwApi.Lib;mfuuid.lib;strmiids.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Mfplat.lib;Mf.lib;mfreadwrite.lib;ShLwApi.Lib;mfuuid.lib;strmiids.lib;ole32.lib;SetupAPI.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>
       </AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EnumerateCamera.c" />
+    <ClCompile Include="ExtensionUnit.c" />
     <ClCompile Include="ReadFrames.c" />
     <ClCompile Include="OpenCamera.c" />
     <ClCompile Include="UVCSettings.c" />
