--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -131,8 +131,10 @@
   <ItemGroup>
     <ClCompile Include="EnumerateCamera.c" />
     <ClCompile Include="ExtensionUnit.c" />
+    <ClCompile Include="ReadFirmwareVersion.c" />
     <ClCompile Include="ReadFrames.c" />
     <ClCompile Include="OpenCamera.c" />
+    <ClCompile Include="Reset.c" />
     <ClCompile Include="UVCSettings.c" />
   </ItemGroup>
   <ItemGroup>
